syntax = "proto3";
package kv_store;

service KVStore {
  rpc Set(SetRequest) returns (SetResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message SetRequest {
  string key = 1;
  int32 value = 2;
}
message SetResponse {
  bool confirmation = 1;
}
message GetRequest {
  string key = 1;
}

message GetResponse {
  optional int32 value = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool confirmation = 1;
}
